fix: don't allow wrapping inline code in table cell

--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -296,6 +296,10 @@
         word-wrap: normal;
     }
 
+    table code {
+        white-space: nowrap;
+    }
+
     pre * code {
         display: inline;
         padding: 0;
